/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.5.1/samples
 * This project uses @Incubating APIs which are subject to change.
 */
plugins {
    //    1. lombok 插件 -> https://projectlombok.org/
    id "io.freefair.lombok" version "6.5.1" apply false
    id "org.jetbrains.kotlin.jvm" version "$kotlinVersion" apply false
    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlinVersion" apply false
}

ext {
    javaProjects = subprojects - [project(":zoe-platform")]
}
tasks.register("showProjects") {
    doLast {
        println("javaProjects:$javaProjects")
    }
}

configure(javaProjects) {
    pro ->
        {
            apply plugin: "java-library"
//            apply plugin: "io.freefair.lombok"

            apply plugin: 'org.jetbrains.kotlin.jvm'
            apply plugin: 'org.jetbrains.kotlin.plugin.serialization'

            group = "com.zoe"

            kotlin {
                jvmToolchain {
                    languageVersion.set(JavaLanguageVersion.of(17))
                }
            }


            dependencies {
                api platform(project(":zoe-platform"))


                testImplementation("org.junit.jupiter:junit-jupiter")
                testImplementation("org.assertj:assertj-core")
            }

            test {
                useJUnitPlatform()
                jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
                         "--add-opens=java.base/java.util=ALL-UNNAMED"])
            }
        }
}